[package]
name = "libdpkg-sys"
description = "Bindings for libdpkg"
version = "0.1.1+1.19"
authors = ["Sebastian Ramacher <sebastian@ramacher.at>"]
repository = "https://github.com/sebastinas/libdpkg-sys"
license = "LGPL-3.0-or-later"
edition = "2021"
rust-version = "1.56"
links = "dpkg"
readme = "README.md"
keywords = ["debian"]
categories = ["external-ffi-bindings"]

[dependencies]

[build-dependencies]
bindgen = "0.69"
system-deps = "7.0"

[package.metadata.system-deps]
libdpkg = "1.19"
